--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -7,9 +7,10 @@ permissions:
   contents: write
 
 jobs:
-  direct_build:
-    name: Build Android TV APK
+  build_apk:
     runs-on: ubuntu-latest
+    name: Build Android TV APK
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
@@ -23,21 +24,23 @@ jobs:
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      - name: Get version from package.json
-        id: package-version
-        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
-
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
           distribution: "zulu"
           java-version: "17"
 
-      - name: Prebuild TV App
-        run: yarn prebuild
+      - name: Get version from package.json
+        id: package-version
+        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
 
-      - name: Build TV APK
-        run: yarn build
+      - name: Clean and Build Release APK
+        run: |
+          rm -rf android/app/build .expo node_modules/.cache android/.gradle android/build
+          yarn prebuild
+          cd android
+          ./gradlew clean
+          ./gradlew assembleRelease
 
       - name: Rename APK file
         run: |
@@ -50,8 +53,6 @@ jobs:
           tag_name: v${{ steps.package-version.outputs.version }}
           name: Release v${{ steps.package-version.outputs.version }}
           body: Automated release for version v${{ steps.package-version.outputs.version }}.
-          draft: false
-          prerelease: false
           files: artifacts/orionTV.${{ steps.package-version.outputs.version }}.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
